Fixes name and medals being cut off

--- a/src/scss/players.scss
+++ b/src/scss/players.scss
@@ -45,6 +45,7 @@ $eloValues: (1500 0.3 1 0.3) (1600 0.3 1 0.5) (1849 0 1 0.7) (1850 1 1 0.7) (190
 	overflow: hidden;
 	display: flex;
 	margin-top: 5px;
+	padding-top: 5px;
 	> .label {
 		width: 50px;
 		height: 65px;
@@ -111,7 +112,6 @@ $eloValues: (1500 0.3 1 0.3) (1600 0.3 1 0.5) (1849 0 1 0.7) (1850 1 1 0.7) (190
 	.player-container.moira {
 		box-shadow: 0 0 5px 2px #fd6088 !important;
 	}
-
 
 	.player-container {
 		user-select: none;
